
add_executable(Day1作业 C语言第七期/作业/Week1/Day1作业.c)
add_executable(Day2作业 C语言第七期/作业/Week1/Day2作业.c)
add_executable(Day3作业 C语言第七期/作业/Week1/Day3作业.c)
add_executable(结构体指针 基础部分/C督学营第二周/结构体指针.c)
add_executable(树的子结构 编码能力部分/树的子结构.cpp)
add_executable(二叉搜索树后序遍历 编码能力部分/二叉搜索树后序遍历.cpp)
add_executable(CopyComplexList 编码能力部分/复杂链表的复制/CopyComplexList.cpp)

add_executable(Queue 数据结构/循环队列/Queue.c)

add_executable(Day4 C语言第七期/作业/Week2/Day4.c)
add_executable(Stack 数据结构/栈/Stack.h)
add_executable(Tree 数据结构/树/Tree.c)

add_executable(Day5 C语言第七期/作业/Week2/Day5.c)
add_executable(Day6 C语言第七期/作业/Week3/Day6.c)
add_executable(Day7 C语言第七期/作业/Week3/Day7.c)
add_executable(Day8 C语言第七期/作业/Week3/Day8.c)
add_executable(Day9 C语言第七期/作业/Week3/Day9.cpp)