


set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_executable(杂/main2.cpp)
add_executable(汉诺塔 杂/汉诺塔.cpp)
add_executable(vector练习 数据结构/顺序表/vector练习.cpp)
add_executable(clangtest "C++ Primer/Chapter 0/输入输出流.cpp")
add_executable(while "C++ Primer/Chapter 0/while.cpp")
add_executable(读取数量不定的输入 "C++ Primer/Chapter 0/读取数量不定的输入.cpp")
add_executable(string "C++ Primer/Chapter 1/string.cpp")
add_executable(vector "C++ Primer/Chapter 1/vector.cpp")
add_executable(hello "C++ Primer/Chapter 1/hello.cpp")